# PnetCDF-Python

./: .gitignore  .readthedocs.yaml  COPYRIGHT  DEVELOPER_NOTES.md  MANIFEST.in  Makefile  README.md  RELEASE_NOTES.md  compare.md  job.sh  make_docs.csh  pyproject.toml  setup.cfg  setup.py  test_all.csh  test_all.sh
.github/workflows/: build_test_latest_c.yml  build_test_source_c.yml  main.yml  openmpi.yml  pnetcdf_c_master.yml  pnetcdf_c_official.yml  pnetcdf_c_official_sdist.yml  static.yml
MNIST/MNIST_codes/: comm_file.py  main.py
docs/: CNAME  DEVELOPER_NOTES.md  copyright.rst  genindex.html  index.html  nc4_vs_pnetcdf.md  objects.inv  readme.rst  requirements.txt  search.html  searchindex.js
docs/_modules/: index.html
docs/api/: attribute_api.html  dimension_api.html  file_api.html  function_api.html  variable_api.html
docs/development/: compatibility.html
docs/doctrees/: environment.pickle
docs/html/: genindex.html
docs/installation/: install.html
docs/introduction/: overview.html
docs/source/: conf.py  copyright.rst  index.rst
docs/tutorial/: basic.html  compare_netcdf4.html  (+3 more)
examples/: Makefile  README.md  collective_write.py  create_open.py  fill_mode.py  flexible_api.py  get_info.py  get_var.py  get_vara.py  ghost_cell.py  global_attribute.py  hints.py  nonblocking_write.py  nonblocking_write_def.py  parallel_run.sh  put_var.py  put_vara.py  put_varn_int.py  run_examples.csh  test_all.sh  transpose.py  transpose2D.py
include/: PnetCDF.pxi
test/: Makefile  README.md  att_create.py  dim_def.py  file_create.py  file_open.py  noclobber.py  parallel_run.sh  run_all.py  test.py  tst_atts.py  tst_atts_cdf2.py  tst_copy_attr.py  tst_default_format.py  tst_dims.py  tst_file_fill.py  tst_file_inq.py  tst_file_mode.py  tst_file_noclobber.py  tst_inq_opened.py  tst_libver.py  tst_netcdf4_comp.py  tst_rename.py  tst_var_bput_var.py  tst_var_bput_var1.py  tst_var_bput_vara.py  tst_var_bput_varm.py  tst_var_bput_varn.py  tst_var_bput_vars.py  tst_var_def_fill.py  tst_var_get_var.py  tst_var_get_var1.py  tst_var_get_vara.py  tst_var_get_varm.py  tst_var_get_varn.py  tst_var_get_vars.py  tst_var_iget_var.py  tst_var_iget_var1.py  tst_var_iget_vara.py  tst_var_iget_varm.py  (+22 more)
(+65 files in other folders)
