#
# Copyright (C) 2024, Northwestern University and Argonne National Laboratory
# See COPYRIGHT notice in top-level directory.
#

[build-system]
requires = [
    "Cython>=0.29",
    "numpy",
    "setuptools>=65",
    "mpi4py>=3.1.4",
    "packaging>=23.1",
    "wheel"
]
build-backend = "setuptools.build_meta"
[tool.setuptools.packages.find]
where = ["src"]
[project]
name = "pnetcdf"
description = "Provides an object-oriented python interface to the PnetCDF library"

requires-python = ">=3.9"
keywords = [
    "numpy", "netcdf", "data", "science", "network", "oceanography",
    "meteorology", "climate",
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Archiving :: Compression",
    "Operating System :: OS Independent",
]
dependencies = [
    "Cython",
    "numpy",
    "mpi4py"
]
dynamic = [
    "version"
]

[project.readme]
text = """\
PnetCDF-Python is a Python interface to PnetCDF, a high-performance I/O library
for accessing NetCDF files in parallel. It can provide MPI-based parallel
python programs to achieve a scalable I/O performance.
"""
content-type = "text/markdown"


