###############################################################################
# 
#  Copyright (C) 2024, Northwestern University and Argonne National Laboratory
#  See COPYRIGHT notice in top-level directory.
# 
###############################################################################

# Follow instructions below for editing.
[options]
# path to pnetcdf_config script (use if not found in unix PATH).
pnetcdf_config=/usr/bin/pnetcdf-config

[check-manifest]
ignore =
    .gitignore
    docs/*
    examples/*py
